syntax = "proto3";

import "buf/validate/validate.proto";

option go_package = "github.com/PaBah/url-shortener.git/proto";

package proto.gophkeeper.v1;

// GophKeeperService service provides ability to store date securely
service GophKeeperService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
  string email = 1 [ (buf.validate.field).string.email = true ];
  string password = 2 [ (buf.validate.field).string.min_len = 1 ];
}

message SignUpResponse {
  string token = 1 [ (buf.validate.field).string.min_len = 1 ];
}

message SignInRequest {
  string email = 1 [ (buf.validate.field).string.email = true ];
  string password = 2 [ (buf.validate.field).string.min_len = 1 ];
}

message SignInResponse {
  string token = 1 [ (buf.validate.field).string.min_len = 1 ];
}
